update .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,73 +1,2 @@
-Web/bootstrap_sandbox_starter/2_2_basic_typography.html
-Web/bootstrap_sandbox_starter/2_3_text_alignment_display.html
-Web/bootstrap_sandbox_starter/2_4_floats_position.html
-Web/bootstrap_sandbox_starter/2_5_colors_background.html
-Web/bootstrap_sandbox_starter/2_6_spacing.html
-Web/bootstrap_sandbox_starter/2_7_sizing.html
-Web/bootstrap_sandbox_starter/2_8_breakpoints.html
-Web/bootstrap_sandbox_starter/3_2_buttons.html
-Web/bootstrap_sandbox_starter/3_3_navbar.html
-Web/bootstrap_sandbox_starter/3_4_list_groups_badges.html
-Web/bootstrap_sandbox_starter/3_5_forms.html
-Web/bootstrap_sandbox_starter/3_6_input_groups.html
-Web/bootstrap_sandbox_starter/3_7_alerts_progress.html
-Web/bootstrap_sandbox_starter/3_8_tables_pagination.html
-Web/bootstrap_sandbox_starter/3_9_cards.html
-Web/bootstrap_sandbox_starter/3_10_media_object.html
-Web/bootstrap_sandbox_starter/3_11_jumbotron.html
-Web/bootstrap_sandbox_starter/4_2_grid_system.html
-Web/bootstrap_sandbox_starter/4_3_grid_alignment.html
-Web/bootstrap_sandbox_starter/4_4_flexbox.html
-Web/bootstrap_sandbox_starter/4_5_auto_margins_wrapping_order.html
-Web/bootstrap_sandbox_starter/5_2_carousel.html
-Web/bootstrap_sandbox_starter/5_3_collapse.html
-Web/bootstrap_sandbox_starter/5_4_tooltips.html
-Web/bootstrap_sandbox_starter/5_5_popovers.html
-Web/bootstrap_sandbox_starter/5_6_modals.html
-Web/bootstrap_sandbox_starter/5_7_scrollspy.html
-Web/materialize_sandbox_starter/2_1_typography.html
-Web/materialize_sandbox_starter/2_2_colors.html
-Web/materialize_sandbox_starter/2_3_buttons_icons.html
-Web/materialize_sandbox_starter/2_4_floating.html
-Web/materialize_sandbox_starter/2_5_navbar.html
-Web/materialize_sandbox_starter/2_6_collections.html
-Web/materialize_sandbox_starter/2_7_grid.html
-Web/materialize_sandbox_starter/3_1_cards.html
-Web/materialize_sandbox_starter/3_2_breadcrumbs.html
-Web/materialize_sandbox_starter/3_3_forms.html
-Web/materialize_sandbox_starter/3_4_forms_2.html
-Web/materialize_sandbox_starter/3_5_tables_media.html
-Web/materialize_sandbox_starter/3_6_chips_pagination.html
-Web/materialize_sandbox_starter/3_7_preloaders.html
-Web/materialize_sandbox_starter/4_1_carousel.html
-Web/materialize_sandbox_starter/4_2_collapsible.html
-Web/materialize_sandbox_starter/4_3_feature_discovery.html
-Web/materialize_sandbox_starter/4_4_dialogs.html
-Web/materialize_sandbox_starter/4_5_material_box_slider.html
-Web/materialize_sandbox_starter/4_6_modal.html
-Web/materialize_sandbox_starter/5_1_parallax.html
-Web/materialize_sandbox_starter/5_2_sidenav.html
-Web/materialize_sandbox_starter/5_3_pushpin.html
-Web/materialize_sandbox_starter/5_4_scrollspy.html
-Web/materialize_sandbox_starter/5_5_tabs.html
-Web/materialize_sandbox_starter/css/materialize.min.css
-Web/materialize_sandbox_starter/css/style.css
-Web/materialize_sandbox_starter/fonts/roboto/Roboto-Bold.woff
-Web/materialize_sandbox_starter/fonts/roboto/Roboto-Bold.woff2
-Web/materialize_sandbox_starter/fonts/roboto/Roboto-Light.woff
-Web/materialize_sandbox_starter/fonts/roboto/Roboto-Light.woff2
-Web/materialize_sandbox_starter/fonts/roboto/Roboto-Medium.woff
-Web/materialize_sandbox_starter/fonts/roboto/Roboto-Medium.woff2
-Web/materialize_sandbox_starter/fonts/roboto/Roboto-Regular.woff
-Web/materialize_sandbox_starter/fonts/roboto/Roboto-Regular.woff2
-Web/materialize_sandbox_starter/fonts/roboto/Roboto-Thin.woff
-Web/materialize_sandbox_starter/fonts/roboto/Roboto-Thin.woff2
-Web/materialize_sandbox_starter/img/img1.jpg
-Web/materialize_sandbox_starter/img/img2.jpg
-Web/materialize_sandbox_starter/img/img3.jpg
-Web/materialize_sandbox_starter/img/img4.jpg
-Web/materialize_sandbox_starter/img/img5.jpg
-Web/materialize_sandbox_starter/img/img6.jpg
-Web/materialize_sandbox_starter/img/img7.jpg
-Web/materialize_sandbox_starter/img/img8.jpg
-Web/materialize_sandbox_starter/js/materialize.min.js
+**/*.exe
+**/*.class
